tests/ui/parser/diff-markers/enum.rs
enum E {
<<<<<<< HEAD //~ ERROR encountered git conflict marker
    Foo(u8),
=======
    Bar(i8),
>>>>>>> branch
}
